--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -27,33 +27,18 @@ jobs:
           # Options
           user: notdankenough
           template: classic
-          base: activity, community, repositories, metadata
+          base: header, activity, community, repositories, metadata
           config_timezone: Asia/Almaty
           plugin_code: yes
           plugin_code_days: 3
           plugin_code_lines: 12
           plugin_code_load: 400
           plugin_code_visibility: public
-          plugin_languages: yes
-          plugin_languages_analysis_timeout: 15
-          plugin_languages_categories: markup, programming
-          plugin_languages_colors: github
-          plugin_languages_details: bytes-size
-          plugin_languages_limit: 8
-          plugin_languages_recent_categories: markup, programming
-          plugin_languages_recent_days: 14
-          plugin_languages_recent_load: 300
-          plugin_languages_sections: most-used
-          plugin_languages_threshold: 0%
           plugin_lines: yes
-          plugin_skyline: yes
-          plugin_skyline_frames: 60
-          plugin_skyline_quality: 0.5
-          plugin_skyline_year: current-year
           plugin_wakatime: yes
-          plugin_wakatime_days: 7
+          plugin_wakatime_days: 30
           plugin_wakatime_limit: 5
           plugin_wakatime_repositories_visibility: all
-          plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
+          plugin_wakatime_sections: time, languages, languages-graphs, editors, os
           plugin_wakatime_url: https://wakatime.com
           plugin_wakatime_user: notdankenough
