--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -41,4 +41,4 @@ jobs:
           plugin_wakatime_repositories_visibility: all
           plugin_wakatime_sections: time, languages, languages-graphs, editors, os
           plugin_wakatime_url: https://wakatime.com
-          plugin_wakatime_user: lottery
+          plugin_wakatime_user: ${{ secrets.WAKATIME_NAME }}
